examples/invalid_provider_harness/network_allowed.argx
module invalid.network
provider OpenAI { kind external enabled false dry_run_only true requires feature_flag requires approval }
harness H { provider OpenAI mode dry_run network allowed secrets denied filesystem none }
